[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labManager-common"
version = "1.0.3"
description = "System for managing multi-station multi-tenant lab setups - common utilities."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Diederick Niehorster", email = "diederick_c.niehorster@humlab.lu.se" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "aiopath",
    "aioshutil",
    "jsonpickle",
    "pathvalidate",
    "psutil ; sys_platform != 'win32'",
    "pysmb",
    "strictyaml",
    "zeroconf"
]

[project.urls]
"Source Code" = "https://github.com/dcnieho/labManager/tree/master/labManager-common"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/labManager"]
