[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labManager-master"
version = "0.9.0"
authors = [
    { name = "Diederick Niehorster", email = "diederick_c.niehorster@humlab.lu.se" },
]
readme = "../README.md"
description = "System for managing multi-station multi-tenant lab setups - master."
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "labManager-common==0.9.0",
    "Authlib",
    "httpx",
]

[project.optional-dependencies]
GUI  = ["imgui_bundle==1.1.0",
        "natsort"]

[project.urls]
"Source Code" = "https://github.com/dcnieho/labManager/tree/master/labManager-master"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/labManager"]
